# prelegal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: document.py  user.py
backend/app/routers/: auth.py  documents.py  templates.py
backend/app/schemas/: auth.py  document.py
backend/app/services/: auth_service.py  document_service.py  template_service.py
backend/tests/: conftest.py  test_auth.py  test_documents.py  test_templates.py
frontend/: .env.local.example  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: DocumentPreview.tsx  NDAForm.tsx
frontend/lib/: api.ts  auth.ts  documentRenderer.ts  pdfGenerator.ts  templateLoader.ts
frontend/public/templates/: contractor-agreement.json  employment-contract.json  index.json  nda-mutual.json  nda-unilateral.json  privacy-policy.json
scripts/: start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: README.md  index.json  service-agreement.json
